Fix make depend in unbuilt build tree
Add dependency rules so that "make depend" succeeds from a fresh build
tree.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25593 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/util/gss-kernel-lib/Makefile.in
+++ b/src/util/gss-kernel-lib/Makefile.in
@@ -208,6 +208,21 @@ profile.h: $(INCLUDE_BUILD)/profile.h
 com_err.h: $(INCLUDE_BUILD)/com_err.h
 	$(CP) $(INCLUDE_BUILD)/com_err.h $@
 
+# Rules to generate dependency headers if they don't already exist,
+# for "make depend" from an unbuilt directory.
+$(GSS_GENERIC_BUILD)/gssapi.h:
+	(cd $(GSS_GENERIC_BUILD) && $(MAKE) gssapi.h)
+$(GSS_GENERIC_BUILD)/gssapi_err_generic.h:
+	(cd $(GSS_GENERIC_BUILD) && $(MAKE) gssapi_err_generic.h)
+$(GSS_KRB5_BUILD)/gssapi_krb5.h:
+	(cd $(GSS_KRB5_BUILD) && $(MAKE) gssapi_krb5.h)
+$(GSS_KRB5_BUILD)/gssapi_err_krb5.h:
+	(cd $(GSS_KRB5_BUILD) && $(MAKE) gssapi_err_krb5.h)
+$(INCLUDE_BUILD)/osconf.h:
+	(cd $(INCLUDE_BUILD) && $(MAKE) osconf.h)
+$(INCLUDE_BUILD)/krb5/krb5.h:
+	(cd $(INCLUDE_BUILD) && $(MAKE) krb5/krb5.h)
+
 gssapi:
 	test -d gssapi || mkdir gssapi
 krb5:
