ticket: 7073 Subject: kadmin.local.8 belongs in ADMIN_mandir tags: pullup target_version: 1.10
Install kadmin.local.8 in ADMIN_MANDIR not CLIENT_MANDIR

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25654 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/man/Makefile.in
+++ b/src/man/Makefile.in
@@ -31,7 +31,7 @@ install-fileman::
 	$(INSTALL_DATA) $(srcdir)/krb5.conf.5 ${DESTDIR}$(FILE_MANDIR)/krb5.conf.5
 
 install-adminman::
-	$(INSTALL_DATA) $(srcdir)/kadmin.local.8 ${DESTDIR}$(CLIENT_MANDIR)/kadmin.local.8
+	$(INSTALL_DATA) $(srcdir)/kadmin.local.8 ${DESTDIR}$(ADMIN_MANDIR)/kadmin.local.8
 	$(INSTALL_DATA) $(srcdir)/kdb5_ldap_util.8 ${DESTDIR}$(ADMIN_MANDIR)/kdb5_ldap_util.8
 	$(INSTALL_DATA) $(srcdir)/kdb5_util.8 ${DESTDIR}$(ADMIN_MANDIR)/kdb5_util.8
 	$(INSTALL_DATA) $(srcdir)/kprop.8 ${DESTDIR}$(ADMIN_MANDIR)/kprop.8
