Fix ASN.1 build
r25695 left behind a dangling reference to the asn1_make object; get
rid of it.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25697 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/krb5/asn.1/Makefile.in
+++ b/src/lib/krb5/asn.1/Makefile.in
@@ -12,8 +12,7 @@ STLIBOBJS= \
 	asn1_encode.o\
 	asn1buf.o\
 	asn1_k_encode.o\
-	ldap_key_seq.o\
-	asn1_misc.o
+	ldap_key_seq.o
 
 SRCS= \
 	$(srcdir)/asn1_encode.c\
@@ -25,8 +24,7 @@ OBJS= \
 	$(OUTPRE)asn1_encode.$(OBJEXT)\
 	$(OUTPRE)asn1buf.$(OBJEXT)\
 	$(OUTPRE)asn1_k_encode.$(OBJEXT)\
-	$(OUTPRE)ldap_key_seq.$(OBJEXT)\
-	$(OUTPRE)asn1_misc.$(OBJEXT)
+	$(OUTPRE)ldap_key_seq.$(OBJEXT)
 
 ##DOS##LIBOBJS = $(OBJS)
 
