--- a/src/configure.in
+++ b/src/configure.in
@@ -1284,7 +1284,7 @@ dnl	lib/krb5/ccache/ccapi
 
 dnl	ccapi ccapi/lib ccapi/lib/unix ccapi/server ccapi/server/unix ccapi/test
 
-	kdc slave config-files gen-manpages man include
+	kdc slave config-files gen-manpages man doc include
 
 	plugins/locate/python
 	plugins/kadm5_hook/test
