Fix documention of unconfigured rsthml build
It's necessary to specify srcdir=. on the command line when building
rsthtml in an unconfigured tree.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25804 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/doc/Makefile.in
+++ b/src/doc/Makefile.in
@@ -12,7 +12,7 @@ sysconfdir=@sysconfdir@
 # release tarball or the web site (that is, without substitutions for
 # configured paths).  This can be done in an unconfigured source tree
 # with:
-#     make -f Makefile.in top_srcdir=.. PYTHON=python rsthml
+#     make -f Makefile.in srcdir=. top_srcdir=.. PYTHON=python rsthml
 #     make -f Makefile.in clean
 rsthtml: composite
 	rm -rf $(docsrc)/rst_html
