--- a/src/plugins/preauth/securid_sam2/Makefile.in
+++ b/src/plugins/preauth/securid_sam2/Makefile.in
@@ -5,7 +5,8 @@ KRB5_CONFIG_SETUP = KRB5_CONFIG=$(top_srcdir)/config-files/krb5.conf ; export KR
 PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
 MODULE_INSTALL_DIR = $(KRB5_PA_MODULE_DIR)
-DEFS=@DEFS@ -DARL_SECURID_PREAUTH
+DEFS=@DEFS@
+DEFINES=-DARL_SECURID_PREAUTH
 
 LOCALINCLUDES = -I../../../include/krb5 -I.
 
@@ -18,15 +19,16 @@ RELDIR=../plugins/preauth/securid_sam2
 SHLIB_EXPDEPS = \
 	$(TOPLIBD)/libk5crypto$(SHLIBEXT) \
 	$(TOPLIBD)/libkrb5$(SHLIBEXT) $(KADMSRV_DEPLIBS)
+ACELIB= -laceclnt
 SHLIB_EXPLIBS= -lkrb5 -lcom_err -lk5crypto $(SUPPORT_LIB) $(KADMSRV_LIBS) \
-	$(LIBS) -laceclnt
+	$(LIBS) $(ACELIB)
 
 SHLIB_DIRS=-L$(TOPLIBD)
 SHLIB_RDIRS=$(KRB5_LIBDIR)
 STOBJLISTS=OBJS.ST
-STLIBOBJS=securid_sam2_main.o securid2.o
+STLIBOBJS=securid_sam2_main.o securid2.o grail.o
 
-SRCS= $(srcdir)/securid_sam2_main.c $(srcdir)/securid2.c 2
+SRCS= $(srcdir)/securid_sam2_main.c $(srcdir)/securid2.c $(srcdir)/grail.c
 
 all-unix:: all-libs
 install-unix:: install-libs
